// Defining syntax as default is proto2
syntax = "proto3";

// defining where autogenerated java classes are to be stored
package com.student_info_system.stubs.student;

// import common.proto
import "common.proto";

// setting this flag to create multiple java class files instead of single one
option java_multiple_files = true;

// request message
message StudentRequest {
  string student_id = 1;
}

// response message to above request
message StudentResponse {
  string student_id = 1;
  string name = 2;
  int32 age = 3;
  common.Gender gender = 4;
  common.Grade maths = 5;
  common.Grade art = 6;
  common.Grade chemistry = 7;
}

// entering student details as list
message StudentDetails {
  repeated StudentResponse studentList = 1;
}

// return string of number of students inserted
message StudentDetailsResponseMessage {
  string response_message = 1;
}

// Defining service
service StudentService {
  rpc getStudentInfo(StudentRequest) returns (StudentResponse);
  rpc addNewStudentInfo(StudentDetails) returns (StudentDetailsResponseMessage);
}
